--- a/SkillSphere_frontend/package.json
+++ b/SkillSphere_frontend/package.json
@@ -10,6 +10,7 @@
     "@huggingface/transformers": "^3.6.1",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.10.0",
+    "canvas-confetti": "^1.9.4",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.11",
     "jspdf": "^3.0.1",
